--- a/GameData/GermanSpaceAlliance/Parts/SPACEXMerlin1D/part.cfg
+++ b/GameData/GermanSpaceAlliance/Parts/SPACEXMerlin1D/part.cfg
@@ -51,7 +51,7 @@ EFFECTS
     }
     MODEL_MULTI_PARTICLE
     {
-      modelName = SpaceX Falcon 9/FX/M1D_exhaust
+      modelName = GermanSpaceAlliance/FX/M1D_exhaust
       transformName = thrustTransform
       emission = 0.0 0.0
       emission = 0.05 0.0
