--- a/GameData/GermanSpaceAlliance/Resources/Resources.cfg
+++ b/GameData/GermanSpaceAlliance/Resources/Resources.cfg
@@ -14,3 +14,12 @@ RESOURCE_DEFINITION
 	transfer = NONE
 	isTweakable = False
 }
+RESOURCE_DEFINITION
+{
+        name = Atmosphere
+        density = 0.005
+        unitCost = 0
+        flowMode = ALL_VESSEL
+        transfer = PUMP
+        isTweakable = false
+}
