--- a/GameData/GermanSpaceAlliance/Resources/Resources.cfg
+++ b/GameData/GermanSpaceAlliance/Resources/Resources.cfg
@@ -23,3 +23,11 @@ RESOURCE_DEFINITION
         transfer = PUMP
         isTweakable = false
 }
+RESOURCE_DEFINITION
+{
+        name = ProcessingPower		
+        density = 0
+        flowMode = ALL_VESSEL
+        transfer = None
+        isTweakable = false
+}
