Bugfix - KSP hat nicht geladen :)

--- a/GameData/GermanSpaceAlliance/Resources/Resources.cfg
+++ b/GameData/GermanSpaceAlliance/Resources/Resources.cfg
@@ -16,18 +16,17 @@ RESOURCE_DEFINITION
 }
 RESOURCE_DEFINITION
 {
-        name = Atmosphere
-        density = 0.005
-        unitCost = 0
-        flowMode = ALL_VESSEL
-        transfer = PUMP
-        isTweakable = false
+	name = Atmosphere
+	density = 0.005
+	flowMode = ALL_VESSEL
+	transfer = PUMP
+	isTweakable = false
 }
 RESOURCE_DEFINITION
 {
-        name = ProcessingPower		
-        density = 0
-        flowMode = ALL_VESSEL
-        transfer = None
-        isTweakable = false
+	name = ProcessingPower		
+	density = 0
+	flowMode = ALL_VESSEL
+	transfer = NONE
+	isTweakable = false
 }
