--- a/Source/GSA/ProcessingPower/ProcessingPower.csproj
+++ b/Source/GSA/ProcessingPower/ProcessingPower.csproj
@@ -47,6 +47,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GUI.cs" />
     <Compile Include="ProcessorModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
