--- a/Source/GSA/ProcessingPower/ProcessingPower.csproj
+++ b/Source/GSA/ProcessingPower/ProcessingPower.csproj
@@ -39,14 +39,17 @@
     <Reference Include="System.Xml" />
     <Reference Include="Assembly-CSharp">
       <HintPath>..\..\..\..\..\Desktop\KSP_win\KSP_Data\Managed\Assembly-CSharp.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine">
       <HintPath>..\..\..\..\..\Desktop\KSP_win\KSP_Data\Managed\UnityEngine.dll</HintPath>
+      <Private>False</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GUI.cs" />
     <Compile Include="CPU.cs" />
+    <Compile Include="Parser.cs" />
+    <Compile Include="Tier1CPU.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
